# rasterizado

./: Cargo.toml  build.rs  index.html  package-lock.json
.github/workflows/: deploy.yml
pkg/: package.json  renderer.d.ts  renderer.js  renderer_bg.wasm.d.ts
res/: mushroom.blend1  mushroom.mtl  oathbringer.mtl
src/: camera.rs  gui.rs  gui_example.rs  hdr.rs  instance.rs  lib.rs  light.rs  light.wgsl  main.rs  model.rs  pipeline.rs  resources.rs  shader.wgsl  texture.rs
