[package]
name = "triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
bytemuck = { version = "1.15.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
egui = "0.27.2"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
env_logger = "0.11.3"
fs_extra = "1.3.0"
glob = "0.3.1"
image = {version = "0.24", default-features = false, features = ["png", "jpeg", "hdr"]}
instant = "0.1.13"
log = "0.4.21"
pollster = "0.3.0"
tobj = { version = "4.0.2", features = ["async"] }
wgpu = {version = "0.19.4", features = ["webgl"]}
winit = "0.29.15"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
